- autoSpell (spell name)
  When the sage autospell list is sent from the server, Kore will
  automatically pick the specified skill name to be used.
  Combine this with a useSelf_skill for casting Auto Spell.
- tankersList is a comma-seperated lists of player names that should be
  treated as if they were in your party so they can tank monsters for you.
  It was previously called ksPlayers.

Credits:
- Squall: some minor fixes, charServer support in servers.txt.
- kaliwanagan, piroJOKE: eathena support.
- zdivpsa: PVP mode packet support
- jsteng: new syntax for the inInventory option.
- denni: bug fixes.
- kaliwanagan: sage autospell support

==================
### 1.6.0
==================

** INCOMPATIBLE CHANGES **:
- Fixed spelling of two monsters.
  Bon Gun is now Bongun.
  Requim is now Requiem.

Bug fixes:
- Fixed a memory problem in the pathfinding code which makes Kore crash.
- Fix bulk selling bug which caused disconnect.
- Correctly set names for VVVS weapons.
- Correct strip language code in public messages.
- Chat messages were saying "chatMsgUser" instead of the person's name.
- target_timeout should work with skills like Kyrie Eleison now. (The problem
  was it says "<target> uses Kyrie Eleison on self", instead of "You use Kyrie
  Eleison on <target>". It now recognizes the former when setting timeouts)
- The Wx interface can now correctly launch a browser on Linux.
- Fix display of map name in config.txt chat entries.
- Restore advanced 2-2 class support from version 1.5.0.
- Sell all items at once instead of just 8 at a time.
- skillsAddAuto was waiting a long time to add the next skill point.
- Auto-drop will look at full item name now.
- Shop auto open delay will now work correctly after reconnecting.
- Don't autoreply in town.
- The !include directive in a config file was causing everything above it to
  be clobbered.
- items_take AI sequence was getting stuck in queue if !itemsTakeAuto.
- 'guild leave' command actually works now.
